--- a/projects/smart/src/scss/sections/_intro.scss
+++ b/projects/smart/src/scss/sections/_intro.scss
@@ -17,4 +17,9 @@ $style: "intro";
     max-width: 272px;
     margin-bottom: 14px;
   }
+  &__arrow-down {
+    width: 17px;
+    height: 23px;
+    margin-bottom: 14px;
+  }
 }
