--- a/projects/smart/src/scss/style.scss
+++ b/projects/smart/src/scss/style.scss
@@ -3,3 +3,5 @@
 @import "common";
 @import "./sections/header";
 @import "./sections/intro";
+@import "./sections/order";
+@import "./sections/testimonials";
