--- a/projects/smart/src/scss/_common.scss
+++ b/projects/smart/src/scss/_common.scss
@@ -49,14 +49,30 @@ p {
   margin: 0;
 }
 
-body {
-  background-color: $grey-100;
+.main {
+  background-color: $white-50;
 }
 
 .container {
   margin: 0 auto;
   padding: 0 16px;
   width: 100%;
+}
+
+.primary-btn {
+  width: 100%;
+  height: 45px;
+  border-radius: 3px;
+  background-color: $red;
+  border: none;
+
+  @include text($H60, 400, $white-100);
+  font-family: $karla;
+
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px #ce3e22;
+  }
 }
 
 .row {
