--- a/projects/smart/src/scss/sections/_testimonials.scss
+++ b/projects/smart/src/scss/sections/_testimonials.scss
@@ -13,6 +13,7 @@ $style: "testimonials";
     border-radius: 3px;
     padding: 30px 20px 50px;
     margin-bottom: 28px;
+    box-shadow: 0px 4px 10px 0px rgba(194, 203, 210, 0.27);
   }
   &__text {
     @include text($H60, 400, $grey-50);
