--- a/projects/smart/src/scss/_vars.scss
+++ b/projects/smart/src/scss/_vars.scss
@@ -26,6 +26,7 @@ $H720: px_to_rem(72px);
 $H550: px_to_rem(55px);
 $H480: px_to_rem(48px);
 $H450: px_to_rem(45px);
+$H420: px_to_rem(42px);
 $H400: px_to_rem(40px);
 $H360: px_to_rem(36px);
 $H350: px_to_rem(35px);
